5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_1189.log
== TEST (2019-05-30 02:03:52) 
-- CODE:
s=input("escreva a string:")
i=0
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:04:17) 
-- CODE:
s=input("escreva a string:")
i=0
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	
	print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a.upper())
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:04:32) 
-- CODE:
s=input("escreva a string:")
i=0
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(a.upper())
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:04:53) 
-- CODE:
s=input("escreva a string:")
i=0
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a).upper()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(a).upper()
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:05:23) 
-- CODE:
s=input("escreva a string:")
i=0
a=""
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a).upper()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:05:42) 
-- CODE:
s=input("escreva a string:")
i=0
a=""
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:06:02) 
-- CODE:
s=input("escreva a string:")
i=0
a=""
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:06:02) 
-- CODE:
s=input("escreva a string:")
i=0
a=""
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:06:02) 
-- CODE:
s=input("escreva a string:")
i=0
a=""
while(i<len(s)):
	if(s[i]==" "):
		a=s.replace(" ","")
	print(a.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:08:27) 
-- CODE:
s=input("escreva a string:")

a=s.replace(" ","")

print(a)


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:08:40) 
-- CODE:
s=input("escreva a string:")

a=s.replace(" ","")

print(a).upper()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:08:53) 
-- CODE:
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 02:20:38) 
-- CODE:
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())

i=0
k=0
b=-1
m=""
s2=zeros(a,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[i]=s[b]
		m=m+s2[i]
		i=i+1
	k=k+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- EXECUTION TIME:
0.125815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 11, in <module>
    s2=zeros(a,dtype=str)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:21:41) 
-- CODE:
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())

i=0
k=0
b=-1
m=""
s2=zeros(a,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[i]=s[b]
		m=m+s2[i]
		i=i+1
	k=k+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s2=zeros(a,dtype=str)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 02:22:35) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())

i=0
k=0
b=-1
m=""
s2=zeros(a,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[i]=s[b]
		m=m+s2[i]
		i=i+1
	k=k+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- EXECUTION TIME:
0.516857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 12, in <module>
    s2=zeros(a,dtype=str)
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:22:36) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())

i=0
k=0
b=-1
m=""
s2=zeros(a,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[i]=s[b]
		m=m+s2[i]
		i=i+1
	k=k+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:23:50) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")
l=len(a)
print(l.upper())

i=0
k=0
b=-1
m=""
s2=zeros(a,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[i]=s[b]
		m=m+s2[i]
		i=i+1
	k=k+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:24:30) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())
l=len(a)
i=0
k=0
b=-1
m=""
s2=zeros(l,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[i]=s[b]
		m=m+s2[i]
		i=i+1
	k=k+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:26:07) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())
l=len(a)
i=0
k=0
b=-1
m=""
s2=zeros(l,dtype=str)
while(i<len(s)):
	if(s[0]!=" "):
		s2[k]=s[b]
		m=m+s2[k]
		k=k+1
	i=i+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 02:26:37) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())
l=len(a)
i=0
k=0
b=-1
m=""
s2=zeros(l,dtype=str)
while(i<len(s)):
	if(s[b]!=" "):
		s2[k]=s[b]
		m=m+s2[k]
		k=k+1
	i=i+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 02:26:51) 
-- CODE:
from numpy import*
s=input("escreva a string:")

a=s.replace(" ","")

print(a.upper())
l=len(a)
i=0
k=0
b=-1
m=""
s2=zeros(l,dtype=str)
while(i<len(s)):
	if(s[b]!=" "):
		s2[k]=s[b]
		m=m+s2[k]
		k=k+1
	i=i+1
	b=b-1
if(m==(s.replace(" ",""))):
	r=1
else:
	r=0
print(r)
		
		


-- EXECUTION TIME:
0.59632
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
